--- a/index.html
+++ b/index.html
@@ -153,19 +153,19 @@ img.cursor-pointer:hover { transform: scale(1.05); box-shadow: 0 10px 25px rgba(
   <div class="relative w-full max-w-7xl mx-auto overflow-hidden rounded-3xl shadow-xl">
     <div id="gallerySlides" class="flex transition-transform duration-500">
 
-      <img src="spinnakerpics/web1.jpg" class="w-full h-[420px] md:h-[520px] object-cover flex-shrink-0 cursor-pointer rounded-xl" />
-      <img src="spinnakerpics/web2.webp" class="w-full h-[420px] md:h-[520px] object-cover flex-shrink-0 cursor-pointer rounded-xl" />
-      <img src="spinnakerpics/web3.jpg" class="w-full h-[420px] md:h-[520px] object-cover flex-shrink-0 cursor-pointer rounded-xl" />
-      <img src="spinnakerpics/web4.jpg" class="w-full h-[420px] md:h-[520px] object-cover flex-shrink-0 cursor-pointer rounded-xl" />
-      <img src="spinnakerpics/1.jpg" class="w-full h-[420px] md:h-[520px] object-cover flex-shrink-0 cursor-pointer rounded-xl" />
-      <img src="spinnakerpics/2.jpg" class="w-full h-[420px] md:h-[520px] object-cover flex-shrink-0 cursor-pointer rounded-xl" />
-      <img src="spinnakerpics/3.jpg" class="w-full h-[420px] md:h-[520px] object-cover flex-shrink-0 cursor-pointer rounded-xl" />
-      <img src="spinnakerpics/4.jpg" class="w-full h-[420px] md:h-[520px] object-cover flex-shrink-0 cursor-pointer rounded-xl" />
-      <img src="spinnakerpics/5.jpg" class="w-full h-[420px] md:h-[520px] object-cover flex-shrink-0 cursor-pointer rounded-xl" />
-      <img src="spinnakerpics/6.jpg" class="w-full h-[420px] md:h-[520px] object-cover flex-shrink-0 cursor-pointer rounded-xl" />
-      <img src="spinnakerpics/7.jpg" class="w-full h-[420px] md:h-[520px] object-cover flex-shrink-0 cursor-pointer rounded-xl" />
-      <img src="spinnakerpics/8.jpg" class="w-full h-[420px] md:h-[520px] object-cover flex-shrink-0 cursor-pointer rounded-xl" />
-      <img src="spinnakerpics/9.jpg" class="w-full h-[420px] md:h-[520px] object-cover flex-shrink-0 cursor-pointer rounded-xl" />
+      <img src="web1.jpg" class="w-full h-[420px] md:h-[520px] object-cover flex-shrink-0 cursor-pointer rounded-xl" />
+      <img src="web2.webp" class="w-full h-[420px] md:h-[520px] object-cover flex-shrink-0 cursor-pointer rounded-xl" />
+      <img src="web3.jpg" class="w-full h-[420px] md:h-[520px] object-cover flex-shrink-0 cursor-pointer rounded-xl" />
+      <img src="web4.jpg" class="w-full h-[420px] md:h-[520px] object-cover flex-shrink-0 cursor-pointer rounded-xl" />
+      <img src="1.jpg" class="w-full h-[420px] md:h-[520px] object-cover flex-shrink-0 cursor-pointer rounded-xl" />
+      <img src="2.jpg" class="w-full h-[420px] md:h-[520px] object-cover flex-shrink-0 cursor-pointer rounded-xl" />
+      <img src="3.jpg" class="w-full h-[420px] md:h-[520px] object-cover flex-shrink-0 cursor-pointer rounded-xl" />
+      <img src="4.jpg" class="w-full h-[420px] md:h-[520px] object-cover flex-shrink-0 cursor-pointer rounded-xl" />
+      <img src="5.jpg" class="w-full h-[420px] md:h-[520px] object-cover flex-shrink-0 cursor-pointer rounded-xl" />
+      <img src="6.jpg" class="w-full h-[420px] md:h-[520px] object-cover flex-shrink-0 cursor-pointer rounded-xl" />
+      <img src="7.jpg" class="w-full h-[420px] md:h-[520px] object-cover flex-shrink-0 cursor-pointer rounded-xl" />
+      <img src="8.jpg" class="w-full h-[420px] md:h-[520px] object-cover flex-shrink-0 cursor-pointer rounded-xl" />
+      <img src="9.jpg" class="w-full h-[420px] md:h-[520px] object-cover flex-shrink-0 cursor-pointer rounded-xl" />
 
     </div>
 
@@ -433,3 +433,4 @@ function openCalendly(){
 </script>
 </body>
 </html>
+
