--- a/index.html
+++ b/index.html
@@ -98,7 +98,17 @@ img.cursor-pointer:hover { transform: scale(1.05); box-shadow: 0 10px 25px rgba(
 
           <button onclick="filterInventory('all'); openContactModal();" class="px-7 py-3 rounded-full border border-slate-300 hover:border-slate-400 bg-white font-medium shadow-sm transition-all">Contact Agent</button>
 
-          <a href="https://www.facebook.com/messages/t/912956801895260" target="_blank" class="px-7 py-3 rounded-full bg-white border border-slate-300 hover:border-slate-400 font-medium shadow-sm transition-all">Message</a>
+        <a 
+  href="https://m.me/912956801895260" 
+  target="_blank"
+  class="px-7 py-3 rounded-full bg-white border border-slate-300 font-medium shadow-sm 
+         hover:border-slate-400 hover:shadow-md hover:bg-slate-50
+         transition-all duration-200"
+>
+  Message
+</a>
+  
+        
         </div>
       </div>
 
