--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ img.cursor-pointer:hover { transform: scale(1.05); box-shadow: 0 10px 25px rgba(
       
       <a href="tel:+639178912225" class="flex items-center gap-2 px-5 py-2.5 rounded-full bg-emerald-600 text-white text-sm font-semibold shadow-md hover:bg-emerald-700 hover:shadow-lg hover:-translate-y-0.5 transition-all duration-200">
         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"></path></svg>
-        +63 976 077 2144
+        +63 917 891 2225
       </a>
     </div>
 
@@ -335,12 +335,9 @@ function resetInterval() {
 
   <div class="flex flex-col sm:flex-row flex-wrap justify-center items-center gap-4">
     
-    <button onclick="openCalendly()" class="w-full sm:w-auto px-8 py-4 rounded-full bg-emerald-600 text-white text-lg font-semibold shadow-lg hover:bg-emerald-700 hover:scale-[1.02] transition transform duration-200 flex items-center justify-center gap-2">
-      <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path></svg>
-      Schedule a call
-    </button>
+ <button onclick="filterInventory('all'); openCalendly();" class="px-7 py-3 rounded-full bg-emerald-600 hover:bg-emerald-700 text-white font-semibold shadow-md transition-all">Schedule a Call</button>
 
-    <a href="https://m.me/yourActualPageID" target="_blank" rel="noopener noreferrer" class="w-full sm:w-auto px-8 py-4 rounded-full bg-white border border-slate-200 text-slate-700 text-lg font-semibold shadow hover:bg-blue-50 hover:text-blue-600 hover:border-blue-200 transition duration-200 flex items-center justify-center gap-2">
+    <a href="https://m.me/912956801895260" target="_blank" rel="noopener noreferrer" class="w-full sm:w-auto px-8 py-4 rounded-full bg-white border border-slate-200 text-slate-700 text-lg font-semibold shadow hover:bg-blue-50 hover:text-blue-600 hover:border-blue-200 transition duration-200 flex items-center justify-center gap-2">
       <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.03 2 11c0 2.87 1.56 5.47 3.97 7.07-.08.63-.43 2.19-.48 2.43-.05.22.1.43.29.48.11.03.23.01.34-.03l2.86-1.03c.97.27 2 .41 3.02.41 5.52 0 10-4.03 10-9s-4.48-9-10-9z"/></svg>
       Messenger
     </a>
