--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ function resetInterval() {
 
   <div class="flex flex-col sm:flex-row flex-wrap justify-center items-center gap-4">
     
- <button onclick="filterInventory('all'); openCalendly();" class="px-7 py-3 rounded-full bg-emerald-600 hover:bg-emerald-700 text-white font-semibold shadow-md transition-all">Schedule a Call</button>
+ <button onclick="openCalendly();" class="px-7 py-3 rounded-full bg-emerald-600 hover:bg-emerald-700 text-white font-semibold shadow-md transition-all">Schedule a Call</button>
 
     <a href="https://m.me/912956801895260" target="_blank" rel="noopener noreferrer" class="w-full sm:w-auto px-8 py-4 rounded-full bg-white border border-slate-200 text-slate-700 text-lg font-semibold shadow hover:bg-blue-50 hover:text-blue-600 hover:border-blue-200 transition duration-200 flex items-center justify-center gap-2">
       <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.03 2 11c0 2.87 1.56 5.47 3.97 7.07-.08.63-.43 2.19-.48 2.43-.05.22.1.43.29.48.11.03.23.01.34-.03l2.86-1.03c.97.27 2 .41 3.02.41 5.52 0 10-4.03 10-9s-4.48-9-10-9z"/></svg>
